#18 - fixed text being too low

--- a/client/src/components/Pages/Pages.css
+++ b/client/src/components/Pages/Pages.css
@@ -82,7 +82,6 @@
 
 #reel #header {
   display: flex;
-  align-items: baseline;
   width: calc(var(--unit) * 16);
   justify-content: space-between;  
   margin-bottom: var(--unit);
